--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -20,6 +20,9 @@
   "enter_email": "Enter your email",
   "enter_password": "Enter your password",
   "enter_confirm_password": "Confirm your password",
+  "username": "Username",
+  "phone": "Phone Number",
+  "register": "Register",
   "invalid_email": "Please enter a valid email",
   "password_too_short": "Password must be at least 6 characters",
   "passwords_not_match": "Passwords do not match",
