--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -20,6 +20,9 @@
   "enter_email": "أدخل بريدك الإلكتروني",
   "enter_password": "أدخل كلمة المرور",
   "enter_confirm_password": "أكد كلمة المرور",
+  "username": "اسم المستخدم",
+  "phone": "رقم الهاتف",
+  "register": "تسجيل",
   "invalid_email": "يرجى إدخال بريد إلكتروني صحيح",
   "password_too_short": "يجب أن تكون كلمة المرور 6 أحرف على الأقل",
   "passwords_not_match": "كلمات المرور غير متطابقة",
